# wasm-contract-compiler

./: .gitignore  CMakeLists.txt  README.md
examples/: simple.hft
src/: Ast.h  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  main.cpp
